# regalloc.rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  TODO.txt  fuzz.sh  publish.sh  rustfmt.toml
.github/workflows/: rust.yml
docs/: interface-proposal.md
fuzz/: Cargo.toml  fuzz_bt.rs  fuzz_bt_differential.rs  fuzz_lsra.rs  fuzz_lsra_differential.rs  fuzz_parser.rs  fuzz_validator.rs
fuzz/fuzz_targets/: bt.rs  bt_differential.rs  lsra.rs  lsra_differential.rs  regalloc2.rs  validator.rs
lib/: Cargo.toml  README.md
lib/src/: analysis.rs  analysis_control_flow.rs  analysis_data_flow.rs  analysis_main.rs  analysis_reftypes.rs  avl_tree.rs  backtracking.rs  bt_coalescing_analysis.rs  bt_commitment_map.rs  bt_main.rs  bt_spillslot_allocator.rs  bt_vlr_priority_queue.rs  bump.rs  checker.rs  data_structures.rs  dense_set.rs  inst_stream.rs  interface.rs  lib.rs  linear_scan.rs  pretty_print.rs  reg_maps.rs  regalloc2.rs  snapshot.rs  sparse_set.rs  tests.rs  trees_maps_sets.rs  union_find.rs
lib/src/linear_scan/: analysis.rs  assign_registers.rs  mod.rs  resolve_moves.rs
src/: analysis.rs  backtracking.rs  data_structures.rs  interface.rs  lib.rs  linear_scan.rs  main.rs  tests.rs
tests/: badness.rat  blocked_fixed.rat  fill_then_sum.rat  fuzz1.rat  fuzz2.rat  fuzz_checker1.rat  fuzz_checker2.rat  fuzz_domtree1.rat  fuzz_ss_coalescing.rat  fuzz_stackmap.rat  fuzz_stackmap2.rat  fuzz_stackmap3.rat  fuzz_stackmap4.rat  lsra_bad.rat  lsra_double_succ.rat  lsra_flush_block_fixups.rat  lsra_fuzz_block_start_end.rat  lsra_inblock_fixup_pos.rat  lsra_invariant_incorrect.rat  lsra_multi_split.rat  lsra_parallel_reloads.rat  lsra_sort_fixed.rat  lsra_split_positions.rat  lsra_split_unused.rat  lsra_split_unused_2.rat  simple_loop.rat  simple_spill.rat  stackmap.rat  straight_line.rat  use_mod.rat
