[package]
name = "minira"
version = "0.1.0"
authors = ["Julian Seward <jseward@acm.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.0.1"
log = { version = "0.4.8", default-features = false }
pretty_env_logger = "0.3.1"
