[package]
name = "minira-util"
version = "0.1.0"
authors = ["The Regalloc.rs Developers"]
edition = "2018"

[workspace]
members = [
    "lib"
]

[[bin]]
name = "minira-util"
path = "./bin/minira.rs"

[lib]
name = "minira"
path = "./bin/minira_lib.rs"

[dependencies]
regalloc =  { path = "./lib", features = ["fuzzing"] }
arbitrary = { version = "0.4.0", features = ["derive"]}
rustc-hash = "1.0.1"
log = { version = "0.4.8", default-features = false }
pretty_env_logger = "0.3.1"
clap = "2.33.0"
