[package]
name = "regalloc"
version = "0.0.31"
authors = ["The Regalloc.rs Developers"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
description = "Modular register allocation algorithms"
repository = "https://github.com/bytecodealliance/regalloc.rs"

[dependencies]
rustc-hash = "1.0.1"
log = { version = "0.4.8", default-features = false }
smallvec = "1.6.1"
serde = { version = "1.0.94", features = ["derive"], optional = true }
bumpalo = { version = "3.4.0", features = ["collections"] }
hashbrown = { git = "https://github.com/cfallin/hashbrown", rev = "be3ea79b9e87363622111c6fda81ffbff1b30d1e", features = ["raw"] }

[features]
default = []
fuzzing = []

# For dependent crates that want to serialize some parts of regalloc.
enable-serde = ["serde"]
